--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <a href="#research">Research</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
-    <a href="resume.pdf" download class="resume-btn">Download Resume</a>
+    <a href="isayani-78.github.io
+/resume.pdf" download class="resume-btn">Download Resume</a>
 
   </nav>
 
