--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <a href="#research">Research</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
-    <a href="https://isayani-78.github.io/resume.pdf" class="resume-btn" download="Sayani Maity Resume.pdf">Download Resume</a>
+    <!-- HTML -->
+<a href="https://isayani-78.github.io/resume.pdf" 
+   class="resume-btn" 
+   download="Sayani Maity Resume.pdf">
+   Download Resume
+</a>
+
 
 
   </nav>
