--- a/index.html
+++ b/index.html
@@ -104,430 +104,108 @@
 </section>
 
 
-       <section id="skills" class="page">
-  <div class="content">
-    <h2>Skills</h2>
+      <!-- ===== Skills Section ===== -->
+<section id="skills" class="skills-section">
+  <h2 class="section-title">Skills</h2>
 
-    <div class="skill-grid-columns">
+  <div class="skills-grid">
 
-      <!-- Languages & Scripting -->
-      <div class="skill-box">
-        <h3>Languages & Scripting</h3>
-        <div class="skill" data-val="90">
-          <label>Python</label>
-          <div class="bar">
-            <div class="fill" data-val="90"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Matplotlib</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="85">
-          <label>Bash</label>
-          <div class="bar">
-            <div class="fill" data-val="85"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Shell Scripting</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>HTML</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>NumPy</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
+    <div class="skill-card">
+      <h3>Languages & Scripting</h3>
+      <div class="skill-tags">
+        <span>Python</span>
+        <span>Matplotlib</span>
+        <span>Bash</span>
+        <span>Shell Scripting</span>
+        <span>HTML</span>
+        <span>NumPy</span>
+        <span>C</span>
+        <span>JavaScript</span>
       </div>
-
-      <!-- Security & Pentesting -->
-      <div class="skill-box">
-        <h3>Security & Pentesting</h3>
-        <div class="skill" data-val="85">
-          <label>VAPT</label>
-          <div class="bar">
-            <div class="fill" data-val="85"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>WAPT</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Threat Management</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="78">
-          <label>Burp</label>
-          <div class="bar">
-            <div class="fill" data-val="78"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="78">
-          <label>Nmap</label>
-          <div class="bar">
-            <div class="fill" data-val="78"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Internet Security</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Network Security</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Forensic & OSINT -->
-      <div class="skill-box">
-        <h3>Forensic & OSINT</h3>
-        <div class="skill" data-val="90">
-          <label>Digital Forensic</label>
-          <div class="bar">
-            <div class="fill" data-val="90"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="85">
-          <label>Computer Forensic</label>
-          <div class="bar">
-            <div class="fill" data-val="85"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Mobile Forensic</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Network Forensic</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Social Engineering</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Information Gathering</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Blue Team</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Operating Systems -->
-      <div class="skill-box">
-        <h3>Operating Systems</h3>
-        <div class="skill" data-val="70">
-          <label>Unix</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="90">
-          <label>GNU/Linux</label>
-          <div class="bar">
-            <div class="fill" data-val="90"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Ubuntu</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="65">
-          <label>Kali Linux</label>
-          <div class="bar">
-            <div class="fill" data-val="65"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="60">
-          <label>Black Arch</label>
-          <div class="bar">
-            <div class="fill" data-val="60"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Parrot</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Windows (as always)</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Tools -->
-      <div class="skill-box">
-        <h3>Tools</h3>
-        <div class="skill" data-val="85">
-          <label>Nmap</label>
-          <div class="bar">
-            <div class="fill" data-val="85"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Autopsy</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>SPF (Smartphone Forensic)</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Magnet AXIOM</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>FTK Imager</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>ZAP</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Wireshark</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>WhatWeb / Wappalyzer</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>OpenVAS</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Nessus</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Nikto</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Netcat</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Telnet</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Netdiscover</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Angry IP Scanner</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Advanced IP Scanner</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>And Many More</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-      </div>
-
     </div>
 
-    <div class="skill-grid-columns">
-
-      <!-- AI & ML -->
-      <div class="skill-box">
-        <h3>Artificial Intelligence & Machine Learning</h3>
-        <div class="skill" data-val="80">
-          <label>AI Prompting</label>
-          <div class="bar">
-            <div class="fill" data-val="80"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="75">
-          <label>Machine Learning (ML)</label>
-          <div class="bar">
-            <div class="fill" data-val="75"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
+    <div class="skill-card">
+      <h3>Security & Pentesting</h3>
+      <div class="skill-tags">
+        <span>VAPT</span>
+        <span>WAPT</span>
+        <span>Threat Management</span>
+        <span>Burp Suite</span>
+        <span>Nmap</span>
+        <span>Internet Security</span>
+        <span>Network Security</span>
+        <span>OWASP Top 10</span>
+        <span>Metasploit</span>
+        <span>Kali Linux</span>
+        <span>Wireshark</span>
+        <span>Packet Analysis</span>
       </div>
-
-      <!-- Data Protection & Information Hiding Techniques -->
-      <div class="skill-box">
-        <h3>Data Protection & Information Hiding Techniques</h3>
-        <div class="skill" data-val="70">
-          <label>Cryptography</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Steganography</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Steganalysis</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Obfuscation</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Encoding</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Decoding</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Quantum Cryptography</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Format-Preserving Encryption (FPE)</label>
-          <div class="bar">
-            <div class="fill" data-val="70"></div>
-            <span class="percent">0%</span>
-          </div>
-        </div>
-      </div>
-
     </div>
+
+    <div class="skill-card">
+      <h3>Forensic & OSINT</h3>
+      <div class="skill-tags">
+        <span>Digital Forensic</span>
+        <span>Computer Forensic</span>
+        <span>Mobile Forensic</span>
+        <span>Network Forensic</span>
+        <span>Social Engineering</span>
+        <span>Information Gathering</span>
+        <span>Blue Team</span>
+        <span>Incident Response</span>
+        <span>OSINT Investigation</span>
+      </div>
+    </div>
+
+    <div class="skill-card">
+      <h3>Tools & Frameworks</h3>
+      <div class="skill-tags">
+        <span>Autopsy</span>
+        <span>FTK Imager</span>
+        <span>Volatility</span>
+        <span>Wireshark</span>
+        <span>Burp Suite</span>
+        <span>Metasploit</span>
+        <span>SQLmap</span>
+        <span>Maltego</span>
+        <span>Recon-ng</span>
+        <span>Shodan</span>
+      </div>
+    </div>
+
+    <div class="skill-card">
+      <h3>Operating Systems</h3>
+      <div class="skill-tags">
+        <span>Kali Linux</span>
+        <span>Windows</span>
+        <span>Ubuntu</span>
+        <span>Parrot OS</span>
+        <span>Remnux</span>
+        <span>CAINE</span>
+      </div>
+    </div>
+
+    <div class="skill-card">
+      <h3>Database & Version Control</h3>
+      <div class="skill-tags">
+        <span>MySQL</span>
+        <span>SQLite</span>
+        <span>Git</span>
+        <span>GitHub</span>
+      </div>
+    </div>
+
+    <div class="skill-card">
+      <h3>Soft Skills</h3>
+      <div class="skill-tags">
+        <span>Team Collaboration</span>
+        <span>Problem Solving</span>
+        <span>Communication</span>
+        <span>Leadership</span>
+        <span>Adaptability</span>
+      </div>
+    </div>
+
   </div>
 </section>
 
